// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FixedGridRow /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      TEST_CLASSNAME
      {
        display: flex;
      }
      & > .y-fixedGridColumn {
        margin-left: 0.8rem;
      }
      & > .y-fixedGridColumn:first-child {
        margin-left: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with bottom spacing matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
        margin-bottom: 2.0rem;
      }
      & > .y-fixedGridColumn {
        margin-left: 0.8rem;
      }
      & > .y-fixedGridColumn:first-child {
        margin-left: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with default options matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
      }
      & > .y-fixedGridColumn {
        margin-left: 0.8rem;
      }
      & > .y-fixedGridColumn:first-child {
        margin-left: 0px;
      }
>
  grid content
</div>
`;

exports[`<FixedGridRow /> with gutter size matches its snapshot 1`] = `
<div
  className=
      y-fixedGridRow
      {
        display: flex;
      }
      & > .y-fixedGridColumn {
        margin-left: 1.6rem;
      }
      & > .y-fixedGridColumn:first-child {
        margin-left: 0px;
      }
>
  grid content
</div>
`;
